--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 EditorStartupMap=/Game/Novoseltseva14082022/Levels/Level.Level
+GlobalDefaultGameMode=/Game/Novoseltseva14082022/Main/MainGM.MainGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
