--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-EditorStartupMap=/Game/Novoseltseva14082022/Levels/Level.Level
+EditorStartupMap=/Game/Novoseltseva14082022/Levels/Level1.Level1
 GlobalDefaultGameMode=/Game/Novoseltseva14082022/Main/MainGM.MainGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
